output.txt
    Checking fusion_core v0.2.0 (C:\Projects\Fusion - Programming Language\registry\crates\fusion_core)
error[E0599]: the method `matmul` exists for reference `&Tensor<T>`, but its trait bounds were not satisfied
  --> registry\crates\fusion_core\src\types\tensor.rs:26:14
   |
26 |         self.matmul(other)
   |              ^^^^^^ method cannot be called on `&Tensor<T>` due to unsatisfied trait bounds
   |
note: the following trait bounds were not satisfied:
      `T: Clone`
      `T: Default`
  --> registry\crates\fusion_core\src\types\tensor.rs:41:8
   |
39 | impl<T> Tensor<T>
   |         ---------
40 | where
41 |     T: Clone + Default,
   |        ^^^^^   ^^^^^^^ unsatisfied trait bound introduced here
   |        |
   |        unsatisfied trait bound introduced here

For more information about this error, try `rustc --explain E0599`.
error: could not compile `fusion_core` (lib) due to 1 previous error
